# Socket-chat

./: CMakeLists.txt  README.md  socket.c  socket.h  tcp_client.c  tcp_client1.c  tcp_server.c
ider/: Store_clients.drawio  ider.md
lib/hash_storage/: hash_storage.c  hash_storage.h
lib/menu/: menu.c  menu.h
lib/socket/: socket.h
lib/tcp_client/: tcp_client.c  tcp_client.h
lib/tcp_server/: tcp_server.c  tcp_server.h
src/: client.c  server.c
tcp_client/: tcp_client.c
tcp_server/: tcp_server.c
test/test_hash_table/: test.c
